@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.4663 2004/02/02 04:10:54 wiz Exp $
+$NetBSD: CHANGES,v 1.4664 2004/02/02 06:40:11 sjg Exp $
 
 Changes to the packages collection and infrastructure in 2004:
 
@@ -546,5 +546,6 @@ Changes to the packages collection and infrastructure in 2004:
 	Updated gcc3 to 3.3.2 [jlam 2004-02-01]
 	Updated naim to 0.11.6.5 [snj 2004-02-01]
 	Updated TeXmacs to 1.0.3.2 [recht 2004-02-01]
+	Updated mk-files to 20040201 [sjg 2004-02-01]
 	Updated clamav to 0.65nb1 [recht 2004-02-02]
 	Updated fprot-workstation-bin to 4.3.2 [wiz 2004-02-02]
